# Trpg-AIkeeper

./: CLAUDE.md  README.md  claude-审查.md  docker-compose.yml  pyproject.toml
data/: aikeeper.db
docs/: TEST_COVERAGE.md  数据流.md  数据流bug+思考.md  规则导入.md
docs/PRDs/: PRD-00-全局协议与投影契约.md  PRD-01-Engine意图生命周期与状态写入边界.md  PRD-02-Host通信总线与路由分发.md  PRD-03-Host全局HUD与状态聚合.md  PRD-04-Host事务播放器与多级队列.md  PRD-05-Host氛围引擎.md  PRD-06-Host舞台演出与剧情渲染.md  PRD-07-Player通信网关与单播路由.md  PRD-08-Player对讲机与语音意图.md  PRD-09-Player活体角色卡与触控检定.md  PRD-10-Player背包与线索软木板.md  PRD-11-Player战术聊天与结构化行动按钮.md  PRD-12-玩家加入房间与手机准备流程.md  PRD-13-玩家角色卡导入与剧本适配反馈.md  PRD-14-玩家行动面板与语音优先输入.md  PRD-15-玩家行动回执与AI归并反馈.md  PRD-16-玩家私密线索与主动分享.md  PRD-17-玩家个人目标与当前任务.md  PRD-18-玩家澄清请求与误判纠正.md  PRD-19-玩家断线重连与状态恢复.md  PRD-20-玩家个人档案与自由复盘查询.md  PRD-21-房主开房与有限急救权限.md  PRD-22-PDF剧本导入与自动结构化.md  PRD-23-剧本质量报告与一键开局.md  PRD-24-AI自动KP主持循环.md  PRD-25-自由行动收集与批次结算.md  PRD-26-防剧透策略与暴露度控制.md  PRD-27-事件日志存档回放与检查点.md  PRD-28-自动结局与可查询战役档案.md  PRD-29-Engine四阶段意图裁决管线与后验物品主张 1.md  PRD-29-Engine四阶段意图裁决管线与后验物品主张.md  PRD-30-双层规则引擎架构.md  README.md
docs/host模块设计/: HOST_PROTOCOL_CONTRACT.md  模块 1 —— Host 端通信总线与路由分发层 (Communication & Dispatch).md  模块 2 —— 全局状态聚合与可视化面板 (Global HUD & Data Aggregation).md  模块 3 —— 异步渲染队列与状态锁 (Render Queue & Flow Control).md  模块 4 —— 独立的多感官环境渲染层 (Atmosphere Engine).md  模块 5 —— 剧情流式渲染与舞台演出 (Narrative & Stage Presentation).md
docs/player模块设计/: 模块 1 —— 玩家级通信网关与单播路由 (Player Network & Unicast Routing)。.md  模块 2 —— 对讲机系统与语音指令采集 (Push-to-Talk & STT Gateway)。.md  (+3 more)
scripts/: test.ps1
src/client/: index.html  (+3 more)
tests/: conftest.py
(+90 files in other folders)
